--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@import "uploadthing/tw/v4";
+/* @source "../../node_modules/@uploadthing/react/dist"; */
+@source "../../node_modules/@uploadthing/react/dist";
+
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
