added more sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,7 +126,7 @@
 
 @layer base {
     * {
-        @apply border-border outline-ring/50;
+        @apply border-border outline-ring/50 font-dm-sans;
     }
     body {
         @apply bg-background text-foreground;
@@ -142,6 +142,10 @@
     }
     .table-col-body {
         @apply p-3 text-sm text-header-text;
+    }
+
+    .container {
+        @apply mx-auto max-w-[1200px];
     }
 }
 
