--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
     --color-foreground: var(--foreground);
     --font-dm-sans: var(--font-dm-sans);
     --font-outfit: var(--font-outfit);
+    --font-brush-script: var(--font-brush-script);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -152,4 +153,47 @@
 .table-body-row {
     display: grid;
     align-items: center;
+}
+
+/* Hero Styles */
+.hero-button {
+    box-shadow: 0px 0px 3px rgba(247, 199, 0, 0.8);
+}
+
+.hero-cover {
+    /* Hero Section */
+    background: linear-gradient(
+        180deg,
+        #ffffff 15.1%,
+        #fbf8f0 41.61%,
+        #fffbef 61.67%,
+        #fff8e8 95.08%
+    );
+}
+
+.gradient-header {
+    background: linear-gradient(90deg, #f7c74b, #5270a1);
+    -webkit-background-clip: text; /* For Safari/Chrome */
+    -webkit-text-fill-color: transparent; /* Makes text show background */
+    background-clip: text; /* For Firefox (requires flag in older versions) */
+    color: transparent; /* Fallback */
+}
+
+/* More Info Section */
+.eagle-eye {
+    /* Eagle Eye */
+
+    position: absolute;
+
+    font-family: "Brush Script MT";
+    font-style: italic;
+    font-weight: 400;
+    font-size: 320px;
+    line-height: 330px;
+
+    background: linear-gradient(180deg, #ffd700 0%, #ff4500 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
 }
