--- a/src/lib/styles/header.css
+++ b/src/lib/styles/header.css
@@ -14,7 +14,7 @@
 .header-container h1 {
     font-size: 80px;
     font-family: var(--font-outfit);
-    /* line-height: 80px; */
+    line-height: 80px;
 }
 
 .header-container p,
@@ -134,7 +134,9 @@
 .header-title-row {
     position: relative;
     width: 100%;
-    height: 140px;
+    height: 90px;
+    /* background-color: red; */
+    /* margin-bottom: 2px; */
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
