--- a/src/lib/styles/header.css
+++ b/src/lib/styles/header.css
@@ -15,6 +15,7 @@
     font-size: 80px;
     font-family: var(--font-outfit);
     line-height: 80px;
+    font-weight: 700;
 }
 
 .header-container p,
@@ -175,5 +176,156 @@
 
     .header-cursor {
         display: none;
+    }
+
+    .header-container h1 {
+        font-size: 40px;
+        line-height: 40px;
+        margin-bottom: 10px;
+    }
+
+    .header-container p,
+    .header-container a {
+        font-size: 16px;
+    }
+
+    .header-container {
+        overflow: hidden;
+        position: relative;
+    }
+
+    .header-cursor {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(255, 255, 255, 0.05);
+        backdrop-filter: blur(20px);
+        border-radius: 100%;
+        pointer-events: none;
+        z-index: 2;
+    }
+
+    .header-cursor p {
+        font-size: 12px;
+        text-transform: uppercase;
+    }
+
+    .header-story-img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+        opacity: 0.5;
+    }
+
+    .header-img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .header-img img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .header-story-content {
+        position: absolute;
+        padding: 2em 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .header-indices {
+        width: 100%;
+        height: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.25em;
+        position: absolute;
+        bottom: 20px;
+    }
+
+    .header-index {
+        position: relative;
+        width: 100%;
+        height: 1px;
+        background: rgba(255, 255, 255, 0.25);
+    }
+
+    .header-index-highlight {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0%;
+        height: 100%;
+        background: #fff;
+        transform: scaleX(100%);
+    }
+
+    .header-title {
+        position: relative;
+        top: 0%;
+        left: 0px;
+        width: 100%;
+        transform: none;
+    }
+
+    .header-row {
+        width: 95%;
+        padding: 20px;
+    }
+
+    .header-title-row {
+        position: relative;
+        width: 100%;
+        height: 40px;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+
+    .header-story-description {
+        position: relative;
+        width: 100%;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+
+    .header-link {
+        position: relative;
+        width: max-content;
+        margin: 2em 0;
+        padding: 0.25em 0;
+    }
+
+    .header-link::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: #fff;
+    }
+    .header-title-row h1 {
+        position: absolute;
+        top: 0;
     }
 }
