--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -225,6 +225,20 @@
     /* prevents clipping */
 }
 
+.hamburger {
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    column-gap: 2em;
+    justify-content: space-between;
+}
+
+.hamburger span {
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+}
+
 @media (max-width: 900px) {
     .eagle-eye {
         /* Eagle Eye */
