--- a/src/lib/styles/header.css
+++ b/src/lib/styles/header.css
@@ -195,19 +195,7 @@
     }
 
     .header-cursor {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100px;
-        height: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgba(255, 255, 255, 0.05);
-        backdrop-filter: blur(20px);
-        border-radius: 100%;
-        pointer-events: none;
-        z-index: 2;
+        display: none;
     }
 
     .header-cursor p {
@@ -288,6 +276,7 @@
         left: 0px;
         width: 100%;
         transform: none;
+        margin-bottom: 20px;
     }
 
     .header-row {
