--- a/src/lib/styles/mobile-nav.css
+++ b/src/lib/styles/mobile-nav.css
@@ -34,6 +34,7 @@
     position: relative;
     border: 1px solid var(--color-header-text);
     border-radius: 100%;
+    background-color: var(--color-primary-gold);
 }
 
 .hamburger span {
