--- a/src/lib/styles/header.css
+++ b/src/lib/styles/header.css
@@ -27,7 +27,6 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    /* margin-top: 20px; */
     background-color: #000;
     position: relative;
 }
@@ -179,14 +178,17 @@
     }
 
     .header-container h1 {
-        font-size: 40px;
-        line-height: 40px;
-        margin-bottom: 10px;
+        font-size: 30px;
+        line-height: 30px;
+        margin-bottom: 5px;
+        width: 100%;
+        text-align: center;
     }
 
     .header-container p,
     .header-container a {
         font-size: 16px;
+        text-align: center;
     }
 
     .header-container {
@@ -205,7 +207,7 @@
 
     .header-story-img {
         position: absolute;
-        top: 0;
+        top: 47.5%;
         left: 0;
         width: 100vw;
         height: 100vh;
@@ -227,6 +229,7 @@
         left: 0;
         width: 100%;
         height: 100%;
+        object-fit: contain;
     }
 
     .header-story-content {
@@ -250,7 +253,8 @@
         align-items: center;
         gap: 0.25em;
         position: absolute;
-        bottom: 20px;
+        top: 10px;
+        padding: 0px 10px;
     }
 
     .header-index {
@@ -282,6 +286,8 @@
     .header-row {
         width: 95%;
         padding: 20px;
+        position: absolute;
+        top: 10%;
     }
 
     .header-title-row {
@@ -316,5 +322,6 @@
     .header-title-row h1 {
         position: absolute;
         top: 0;
+        /* text-align: center; */
     }
 }
