--- a/src/lib/styles/mobile-nav.css
+++ b/src/lib/styles/mobile-nav.css
@@ -14,7 +14,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    padding: 2rem;
+    padding: 2rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
