reworking some parts of the website

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -239,6 +239,11 @@
     border-radius: 4px;
 }
 
+.line-anim-setup {
+    transform: translateY(100%);
+    will-change: transform;
+}
+
 @media (max-width: 900px) {
     .eagle-eye {
         /* Eagle Eye */
